# gym-http-api

./: .gitignore  .project  .travis.yml  DQN_cartpole.py  README.md  dqn_agent.py  example_agent.py  gym_http_client.py  gym_http_server.py  prog.py  requirements.txt  sonic-train.csv  swagger.yaml
Agents/: A2C.py  A2C_cartpole.py  DDPG_pendulum.py  DQN.py  DQN_cartpole.py  DQN_pendulum.py  HER_coin.py  Main.py  PG_cartpole.py  PPO_pendulum.py  SAC_pendulum.py  basic_agent.py  multi_agent.py  simple-sonic-agent.py
Agents/aborghiPPO/retro_contest_agent-master/: README.md
Agents/aborghiPPO/retro_contest_agent-master/data/SonicAdvance-Gba/: data.json  rom.sha  script.lua  sonica-0-0.state  sonica-0-1.state  sonica-1-0.state  sonica-1-1.state  sonica-2-0.state  (+7 more)
Agents/aborghiPPO/retro_contest_agent-master/fastlearner/: ppo2ttifrutti.py  ppo2ttifrutti_agent.docker  ppo2ttifrutti_agent.py  ppo2ttifrutti_policies.py  ppo2ttifrutti_sonic_env.py
Agents/aborghiPPO/retro_contest_agent-master/metalearner/: ppo2ttifrutti.py  ppo2ttifrutti_agent.py  ppo2ttifrutti_agent_trunc.py  ppo2ttifrutti_policies.py  ppo2ttifrutti_sonic_env.py  ppo2ttifrutti_sonic_env_trunc.py
Central/: DDPG.py  Main.py  Main2.py  Main_con.py  Main_disc.py  PG.py  SAC.py  gym_cmd.py  neural-style.py  random_agent.py
NSGA2/: BaldwinianExample.bat  LamarckianExample.bat  NSGAII.py  NoLearningExample.bat  PurePPO.bat  config-feedforward  enjoy.py  evaluation.py  ppo2plotter.py  ppo2ttifrutti.py  ppo2ttifrutti_agent.py
NSGA2/helpers/: arguments.py  distributions.py  envs.py  model.py  sonic_wrappers.py  utils.py
binding-Julia/: example_agent.jl
binding-R/: example_agent.R
binding-Ruby/: example_agent.rb  gym_client.rb
binding-clojure/: README.md  build.boot
binding-clojure/src/: example_agent.clj  gym_client.clj
binding-cpp/: Makefile  gym_binding.cpp  random_agent.cpp
binding-cpp/include/gym/: gym.h
binding-go/: client.go
binding-go/demo/: cartpole.go
binding-go/demo/pong/: main.go
binding-hs/: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  binding-hs.cabal  gym-http-api.cabal  package.yaml  stack-lts-7.19.yaml  stack.yaml
binding-hs/app/: Main.hs
binding-hs/examples/: Agent.hs
binding-hs/src/: Agent.hs  Client.hs  Lib.hs
binding-hs/src/Network/: Gym.hs
binding-hs/src/Network/Gym/: CreateEnv.hs  GymEnv.hs  Prelude.hs  ResetEnv.hs  StepEnv.hs
binding-hs/src/OpenAI/: Gym.hs
binding-hs/src/OpenAI/Gym/: API.hs  Client.hs  Data.hs  Prelude.hs
binding-hs/test/: AppSpec.hs  DocTest.hs
binding-js/: README.md  gulpfile.js  package.json  pre_install.sh  ts_format.sh
binding-js/src/: typings.json
binding-js/src/examples/: exampleAgent.ts  example_agent.ts
binding-js/src/lib/: gymHTTPClient.ts  gym_http_client.ts  ioInterfaces.ts
binding-js/src/test/: example_agent.ts
binding-lua/: example_agent.lua  gym_http_client.lua  randomDiscrete_agent.lua  test_api.lua
binding-matlab/: example_agent.m  gym_http_client.m
binding-rust/: Cargo.toml
binding-rust/examples/: random_agent.rs
binding-rust/src/: error.rs  lib.rs  space.rs
binding-rust/tests/: lib.rs  random_agent.rs
binding-swift/: README.md  client.swift
binding-swift/ExampleAgent.playground/: Contents.swift
binding-swift/ExampleAgent.playground/Sources/: GymClient.swift
binding-swift/ExampleAgent.playground/playground.xcworkspace/: contents.xcworkspacedata
binding-wl/: Readme.md  example_agent.wl  gym_http_client.wl
fastlearner/: ppo2plotter.py  ppo2ttifrutti.py  ppo2ttifrutti_agent.py  ppo2ttifrutti_policies.py  ppo2ttifrutti_sonic_env.py
pytorch-a2c-ppo-acktr-gail/: enjoy.py  evaluation.py  launch.bat  main.py  visualize.ipynb  watch.bat
pytorch-a2c-ppo-acktr-gail/a2c_ppo_acktr/: arguments.py  envs.py  model.py  sonic_util.py
pytorch-a2c-ppo-acktr-gail/trained_models/ppo/: PongNoFrameskip-v4.pt
tests/: test_api.py
(+40 files in other folders)
