name:                binding-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Haskell binding for the OpenAi gym API
homepage:            https://github.com/openai/gym-http-api
license:             MIT
license-file:        ../LICENSE
author:              Daniel Lucsanszky
maintainer:          dl3913@ic.ac.uk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Agent
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-client
                     , monad-loops
                     , unordered-containers
                     , servant
                     , servant-client
                     , servant-lucid
                     , text
                     , transformers

  default-language:    Haskell2010

executable binding-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binding-hs
  default-language:    Haskell2010

test-suite binding-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binding-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-K1K
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lucsanszky/binding-hs
